# mimir-1

./: .gitignore  README.md  pyproject.toml
core/: consumer.py  example_module.py  kafka_bus.py  producer.py  settings.py
excel/: .excel_state.json  excel_event_schema.py  excel_kafka_publisher.py  excel_kafka_topics.py  excel_watcher.py
excel/excels/: .~lock.New OpenDocument Spreadsheet.xlsx#  New OpenDocument Spreadsheet.xlsx
real_time_streaming/: rts_clicks_stream.py  rts_kafka_counts_publisher.py  rts_kafka_counts_schemas.py  rts_kafka_publisher.py  rts_kafka_schemas.py  rts_kafka_topics.py
real_time_streaming/app/: main.py
real_time_streaming/app/static/: index.html
tests/: test_kafka_setup.py
